--- a/app/src/main/res/layout/bottom_sheet_extension_test_settings.xml
+++ b/app/src/main/res/layout/bottom_sheet_extension_test_settings.xml
@@ -17,38 +17,42 @@
         android:textAlignment="center"
         android:textSize="16sp" />
 
-    <RadioGroup
-        android:id="@+id/extensionTypeRadioGroup"
-        android:layout_width="match_parent"
+<com.google.android.material.chip.ChipGroup
+    android:id="@+id/extensionTypeChipGroup"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    app:singleSelection="true">
+
+    <com.google.android.material.chip.Chip
+        android:id="@+id/animeChip"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:text="@string/anime"
+        android:textSize="16sp"
+        app:checkedIconVisible="false"
+        app:chipBackgroundColor="?attr/colorSecondary"
+        android:checked="true" />
 
-        <com.google.android.material.radiobutton.MaterialRadioButton
-            android:id="@+id/animeRadioButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:checked="true"
-            android:text="@string/anime"
-            android:textSize="16sp" />
+    <com.google.android.material.chip.Chip
+        android:id="@+id/mangaChip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/manga"
+        android:textSize="16sp"
+        app:checkedIconVisible="false"
+        app:chipBackgroundColor="?attr/colorSecondary" />
 
-        <com.google.android.material.radiobutton.MaterialRadioButton
-            android:id="@+id/mangaRadioButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:text="@string/manga"
-            android:textSize="16sp" />
+    <com.google.android.material.chip.Chip
+        android:id="@+id/novelsChip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/novels"
+        android:textSize="16sp"
+        app:checkedIconVisible="false"
+        app:chipBackgroundColor="?attr/colorSecondary" />
 
-        <com.google.android.material.radiobutton.MaterialRadioButton
-            android:id="@+id/novelsRadioButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/novels"
-            android:textSize="16sp" />
-
-    </RadioGroup>
-
+</com.google.android.material.chip.ChipGroup>
     <TextView
         android:id="@+id/testTypeTextView"
         android:layout_width="wrap_content"
