--- a/app/src/main/res/layout/activity_settings_accounts.xml
+++ b/app/src/main/res/layout/activity_settings_accounts.xml
@@ -303,7 +303,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="center_vertical"
-        android:background="?attr/colorSecondary"
+        android:background="?attr/colorError"
         android:elevation="4dp"
         />
 
