--- a/app/src/main/res/layout/bottom_sheet_extension_test_settings.xml
+++ b/app/src/main/res/layout/bottom_sheet_extension_test_settings.xml
@@ -37,7 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|left"
-        android:fontFamily="@font/poppins_medium"
+        android:fontFamily="@font/poppins_semi_bold"
         android:text="@string/extension_type"
         android:textAlignment="center"
         android:textSize="16sp" />
@@ -81,7 +81,7 @@
     android:layout_height="wrap_content"
     android:layout_gravity="bottom|left"
     android:layout_marginTop="16dp"
-    android:fontFamily="@font/poppins_medium"
+    android:fontFamily="@font/poppins_semi_bold"
     android:text="@string/test_type"
     android:textAlignment="center"
     android:textSize="16sp" />
