--- a/app/src/main/res/layout/activity_settings_accounts.xml
+++ b/app/src/main/res/layout/activity_settings_accounts.xml
@@ -297,29 +297,31 @@
     android:layout_height="wrap_content"
     android:layout_gravity="center">
 
-    <com.google.android.material.button.MaterialButtonToggleGroup
-        android:id="@+id/toggleGroupAccount"
+<com.google.android.material.chip.ChipGroup
+    android:id="@+id/chipGroupAccount"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    app:singleSelection="true"
+    app:selectionRequired="true">
+
+    <com.google.android.material.chip.Chip
+        android:id="@+id/chip1Account"
+        style="@style/Widget.MaterialComponents.Chip.Choice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:singleSelection="true"
-        app:selectionRequired="true">
+        android:checkable="true"
+        android:checked="true"
+        android:text="Option 1" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/button1Account"
-            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:checked="true"
-            android:text="Option 1" />
+    <com.google.android.material.chip.Chip
+        android:id="@+id/chip2Account"
+        style="@style/Widget.MaterialComponents.Chip.Choice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:checkable="true"
+        android:text="Option 2" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/button2Account"
-            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Option 2" />
-
-    </com.google.android.material.button.MaterialButtonToggleGroup>
+</com.google.android.material.chip.ChipGroup>
 </FrameLayout>
         <ani.dantotsu.FadingEdgeRecyclerView
             android:id="@+id/settingsRecyclerView"
