--- a/app/src/main/res/layout/item_settings_switch.xml
+++ b/app/src/main/res/layout/item_settings_switch.xml
@@ -57,9 +57,8 @@
                 android:id="@+id/settingsExtraIcon"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:layout_gravity="top"
-                android:layout_marginTop="6dp"
-                android:layout_marginEnd="12dp"
+                android:layout_marginTop="48dp"
+                android:layout_marginLeft="-68dp"
                 android:visibility="gone"
                 app:srcCompat="@drawable/ic_circle_add"
                 app:tint="?attr/colorPrimary"
