--- a/app/src/main/res/layout/item_settings_switch.xml
+++ b/app/src/main/res/layout/item_settings_switch.xml
@@ -29,6 +29,7 @@
             android:id="@+id/settingsTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingRight="28dp"
             android:textSize="16sp"
             android:textColor="?attr/colorOnBackground"
             android:fontFamily="@font/poppins_bold"
@@ -38,6 +39,7 @@
             android:id="@+id/settingsDesc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingRight="28dp"
             android:alpha="0.66"
             android:fontFamily="@font/poppins_semi_bold"
             android:text="@string/slogan"
