--- a/app/src/main/res/layout/item_settings_switch.xml
+++ b/app/src/main/res/layout/item_settings_switch.xml
@@ -29,7 +29,7 @@
             android:id="@+id/settingsTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingRight="28dp"
+            android:paddingRight="32dp"
             android:textSize="16sp"
             android:textColor="?attr/colorOnBackground"
             android:fontFamily="@font/poppins_bold"
@@ -39,7 +39,7 @@
             android:id="@+id/settingsDesc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingRight="28dp"
+            android:paddingRight="32dp"
             android:alpha="0.66"
             android:fontFamily="@font/poppins_semi_bold"
             android:text="@string/slogan"
@@ -50,7 +50,8 @@
                 android:id="@+id/settingsButton"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="-200dp"
+                android:layout_marginLeft="-450dp"
+                android:layout_marginBottom="8dp"
                 android:layout_weight="1"
                 app:showText="false"
                 app:thumbTint="@color/button_switch_track" />
