--- a/app/src/main/res/layout/bottom_sheet_proxy.xml
+++ b/app/src/main/res/layout/bottom_sheet_proxy.xml
@@ -106,7 +106,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppins_bold"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="10dp"
             android:text="Authentication" />
 
         <com.google.android.material.textfield.TextInputLayout
@@ -114,7 +114,7 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
             android:layout_width="match_parent"
             android:layout_height="56dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="10dp"
             android:hint="USERNAME"
             app:boxCornerRadiusBottomEnd="16dp"
             app:boxCornerRadiusBottomStart="16dp"
@@ -144,7 +144,7 @@
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:layout_marginTop="16dp"
-            android:hint="Password"
+            android:hint="PASSWORD"
             app:boxCornerRadiusBottomEnd="16dp"
             app:boxCornerRadiusBottomStart="16dp"
             app:boxCornerRadiusTopEnd="16dp"
