--- a/app/src/main/res/layout/bottom_sheet_proxy.xml
+++ b/app/src/main/res/layout/bottom_sheet_proxy.xml
@@ -56,7 +56,7 @@
                 app:boxStrokeColor="@color/text_input_layout_stroke_color"
                 app:endIconMode="none"
                 app:hintAnimationEnabled="true"
-                app:startIconDrawable="@drawable/ic_round_star_24">
+                app:startIconDrawable="@drawable/ic_round_dns_24">
 
                 <AutoCompleteTextView
                     android:id="@+id/proxyHost"
@@ -85,7 +85,7 @@
                 app:boxStrokeColor="@color/text_input_layout_stroke_color"
                 app:endIconMode="none"
                 app:hintAnimationEnabled="true"
-                app:startIconDrawable="@drawable/ic_round_star_24">
+                app:startIconDrawable="@drawable/network_node_24">
 
                 <AutoCompleteTextView
                     android:id="@+id/proxyPort"
@@ -123,7 +123,7 @@
             app:boxStrokeColor="@color/text_input_layout_stroke_color"
             app:endIconMode="none"
             app:hintAnimationEnabled="true"
-            app:startIconDrawable="@drawable/ic_round_star_24">
+            app:startIconDrawable="@drawable/ic_round_person_24">
 
             <AutoCompleteTextView
                 android:id="@+id/proxyUsername"
@@ -152,7 +152,7 @@
             app:boxStrokeColor="@color/text_input_layout_stroke_color"
             app:endIconMode="password_toggle"
             app:hintAnimationEnabled="true"
-            app:startIconDrawable="@drawable/ic_round_star_24">
+            app:startIconDrawable="@drawable/vpn_key_24">
 
             <AutoCompleteTextView
                 android:id="@+id/proxyPassword"
