--- a/app/src/main/res/layout/bottom_sheet_proxy.xml
+++ b/app/src/main/res/layout/bottom_sheet_proxy.xml
@@ -29,7 +29,7 @@
                 android:layout_weight="1"
                 android:fontFamily="@font/poppins"
                 android:gravity="center_vertical"
-                android:text="SOCKS5"
+                android:text="@string/socks5"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
@@ -48,7 +48,7 @@
                 android:layout_height="56dp"
                 android:layout_weight="5"
                 android:layout_marginEnd="8dp"
-                android:hint="HOST"
+                android:hint="@string/host"
                 app:boxCornerRadiusBottomEnd="16dp"
                 app:boxCornerRadiusBottomStart="16dp"
                 app:boxCornerRadiusTopEnd="16dp"
@@ -77,7 +77,7 @@
                 android:layout_width="0dp"
                 android:layout_height="56dp"
                 android:layout_weight="3"
-                android:hint="PORT"
+                android:hint="@string/port"
                 app:boxCornerRadiusBottomEnd="16dp"
                 app:boxCornerRadiusBottomStart="16dp"
                 app:boxCornerRadiusTopEnd="16dp"
@@ -107,7 +107,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppins_bold"
             android:layout_marginTop="10dp"
-            android:text="Authentication" />
+            android:text="@string/authentication" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/proxyUsernameLayout"
@@ -115,7 +115,7 @@
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:layout_marginTop="10dp"
-            android:hint="USERNAME"
+            android:hint="@string/username"
             app:boxCornerRadiusBottomEnd="16dp"
             app:boxCornerRadiusBottomStart="16dp"
             app:boxCornerRadiusTopEnd="16dp"
@@ -144,7 +144,7 @@
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:layout_marginTop="16dp"
-            android:hint="PASSWORD"
+            android:hint="@string/password"
             app:boxCornerRadiusBottomEnd="16dp"
             app:boxCornerRadiusBottomStart="16dp"
             app:boxCornerRadiusTopEnd="16dp"
